[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/paddle_hit.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "PiNG!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -38.5
margin_top = 57.0
margin_right = 38.5
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "by
Iury Ramos Garcia"
align = 1

[node name="Label3" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -19.0
margin_right = 77.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 3 )
text = "v1.0 ( 2021 )"
align = 1

[node name="BtnContinue" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.0
margin_top = 104.0
margin_right = 77.0
margin_bottom = 126.0
focus_neighbour_top = NodePath("../BtnQuit")
focus_neighbour_bottom = NodePath("../BtnNewGame")
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnNewGame" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.0
margin_top = 128.0
margin_right = 77.0
margin_bottom = 150.0
focus_neighbour_top = NodePath("../BtnContinue")
focus_neighbour_bottom = NodePath("../BtnToggle")
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "New Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnToggle" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.0
margin_top = 152.0
margin_right = 77.0
margin_bottom = 174.0
focus_neighbour_top = NodePath("../BtnNewGame")
focus_neighbour_bottom = NodePath("../BtnQuit")
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Toggle Fullscreen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnQuit" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.0
margin_top = 176.0
margin_right = 77.0
margin_bottom = 198.0
focus_neighbour_top = NodePath("../BtnToggle")
focus_neighbour_bottom = NodePath("../BtnContinue")
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Quit Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnFocused" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource( 3 )

[connection signal="focus_entered" from="Panel/BtnContinue" to="." method="_on_btn_focus_entered"]
[connection signal="pressed" from="Panel/BtnContinue" to="." method="_on_BtnContinue_pressed"]
[connection signal="focus_entered" from="Panel/BtnNewGame" to="." method="_on_btn_focus_entered"]
[connection signal="pressed" from="Panel/BtnNewGame" to="." method="_on_BtnNewGame_pressed"]
[connection signal="focus_entered" from="Panel/BtnToggle" to="." method="_on_btn_focus_entered"]
[connection signal="pressed" from="Panel/BtnToggle" to="." method="_on_BtnToggle_pressed"]
[connection signal="focus_entered" from="Panel/BtnQuit" to="." method="_on_btn_focus_entered"]
[connection signal="pressed" from="Panel/BtnQuit" to="." method="_on_BtnQuit_pressed"]
